--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,5 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - run: |
-        & download_butler.ps1
-        exit 0
+    - run: powershell -File download_butler.ps1
       shell: powershell
