--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
 
       - name: Extract Version
         id: extract_version
-        run: Write-Host "::set-output name=version::$(${env:GITHUB_REF}.Split('/')[2])"
+        run: echo "::set-output name=version::$(${env:GITHUB_REF}.Split('/', 3)[2])"
 
       - run: powershell -File echo.ps1
         env:
